# stock-finder

./: .gitignore  README.md  pyproject.toml
output/: hot_news_stocks.csv
src/: __init__.py  app.py  main.py  run_hot_news_analyzer.py  streamlit_hot_news_analyzer.py
src/agents/: __init__.py  agent_manager.py
src/analyzers/: __init__.py  analyzer_manager.py  hot_news_fund_flow_analyzer.py
src/data_fetchers/: __init__.py  data_manager.py
src/utils/: __init__.py  news_fetcher.py
